force-app/main/default/objects/Account/fields/SLA_Level_2__c.field-meta.xml
<CustomField>
    <fullName>SLA_Level_2__c</fullName>
    <label>SLA Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>