force-app/main/default/objects/Account/fields/SLA_Level_5__c.field-meta.xml
<CustomField>
    <fullName>SLA_Level_5__c</fullName>
    <label>SLA Level 5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimum</fullName>
            </value>
            <value>
                <fullName>Maximum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>